# MyPush

app/: build.gradle
app/src/androidTest/java/com/yu/mypush/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/yu/mypush/: LivePusher.java  MainActivity.java
app/src/main/java/com/yu/mypush/media/: AudioChannel.java  CameraHelper.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/yu/mypush/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
